--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link href="../../assets/css/output.css" rel="stylesheet">
-     <link rel="shortcut icon" href="../../assets/img/logo-wana-agency-web-rougeblanc.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
 </head>
 <body class="bg-pink-100">
     <!-- nav mod desktop -->
