--- a/src/pages/services/index.html
+++ b/src/pages/services/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../../assets/css/output.css" rel="stylesheet">
-    <link rel="shortcut icon" href="../../assets/img/logo-wana-agency-web-rougeblanc.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
     <title>Services</title>
 </head>
 <body>
